--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,15 @@
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <script>
       function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
         var profile = googleUser.getBasicProfile();
-        // console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        // console.log('Full Name: ' + profile.getName());
-        // console.log('Given Name: ' + profile.getGivenName());
-        // console.log('Family Name: ' + profile.getFamilyName());
-        // console.log("Image URL: " + profile.getImageUrl());
-        // console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
         var id_token = googleUser.getAuthResponse().id_token;
-        // console.log("ID Token: " + id_token);
 
         var xhr = new XMLHttpRequest(); 
         xhr.open('POST', '/login', true); 
         xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded'); 
         xhr.withCredentials = true;
         xhr.onload = function() { 
-          console.log('OAuth2 authenticated: ' + xhr.responseText); 
+          console.log('payload for front end use is  ' + xhr.responseText); 
         }; 
         xhr.send('idtoken='+ id_token);
       };
