--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded'); 
         xhr.withCredentials = true;
         xhr.onload = function() { 
-          console.log('payload for front end use is  ' + xhr.responseText); 
+          console.log('login data: ' + xhr.responseText); 
         }; 
         xhr.send('idtoken='+ id_token);
       };
