--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded'); 
         xhr.withCredentials = true;
         xhr.onload = function() { 
-          console.log('login data: ' + xhr.responseText); 
+          // console.log('login data: ' + xhr.responseText); 
         }; 
         xhr.send('idtoken='+ id_token);
       };
@@ -27,7 +27,7 @@
       function signOut() {
         var auth2 = gapi.auth2.getAuthInstance();
         auth2.signOut().then(function () {
-          console.log('User signed out.');
+          // console.log('User signed out.');
         });
       }
     </script>
